@@ -125,7 +125,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version><configuration><source>11</source><target>11</target></configuration>
+                <version>3.13.0</version><configuration><source>23</source><target>23</target>
+                <compilerArgs>--enable-preview</compilerArgs>
+            </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
